make it work with gradle